Added multiple features

--- a/app/src/main/res/layout/character_creation.xml
+++ b/app/src/main/res/layout/character_creation.xml
@@ -115,7 +115,7 @@
         app:layout_constraintTop_toTopOf="@+id/level" />
 
     <Button
-        android:id="@+id/createcharacter"
+        android:id="@+id/nextstep"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
@@ -123,7 +123,7 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
-        android:text="@string/btn_createcharacter"
+        android:text="@string/btn_nextstep"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
