--- a/app/src/main/res/layout/cell_layout.xml
+++ b/app/src/main/res/layout/cell_layout.xml
@@ -10,7 +10,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:adjustViewBounds="true"
+        android:background="#530000"
         android:contentDescription="@string/txt_name"
-        android:padding="0dp"
-        android:onClick="grayOut"/>
+        android:onClick="grayOut"
+        android:padding="2dp" />
 </LinearLayout>
